--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TeamIT.uz Clone | For Abdulaziz Abduqaxxarov</title>
+    <title>WEB sit</title>
     <link rel="stylesheet" href="./Css/style.css">
     <link rel="shortcut icon" href="./img/favicon.ico">
 </head>
@@ -29,11 +29,11 @@
                     </ul>
                 </div>
             </div>
-
+<!-- 
             <div class="theme">
                 <img onclick="foo()" id="sun" src="./Img/sun.png" class="show" alt="">
                 <img onclick="foo()" id="moon" src="./Img/moon-dark.png" class="hight" alt="">
-            </div>
+            </div> -->
 
             <div class="menu-img hight">
                 <img onclick="menuClick()" src="./Img/menu.png" id="open" alt="">
@@ -167,16 +167,16 @@
                     <img src="./Img/Media/photo_1.jpg" alt="">
                 </div>
                 <div class="media-box">
-                    <img src="./Img/Media/photo_1.jpg" alt="">
+                    <img src="./Img/Media/photo_3.jpg" alt="">
                 </div>
                 <div class="media-box">
                     <img src="./Img/Media/photo_1.jpg" alt="">
                 </div>
                 <div class="media-box">
-                    <img src="./Img/Media/photo_1.jpg" alt="">
+                    <img src="./Img/Media/photo_5.jpg" alt="">
                 </div>
                 <div class="media-box">
-                    <img src="./Img/Media/photo_1.jpg" alt="">
+                    <img src="./Img/Media/photo_6.jpg" alt="">
                 </div>
             </div>
 
@@ -220,11 +220,11 @@
                     <h2>Aloqa</h2>
                     <div class="row">
                         <img src="./Img/phone.svg" alt="">
-                        <h3>33 090 27 04</h3>
+                        <h3>77 000 71 80</h3>
                     </div>
                     <div class="row">
                         <img src="./Img/location.svg" alt="">
-                        <h3>Manzil: Jizzax V. Gagarin Sh</h3>
+                        <h3>Manzil: Namagan V Norin T</h3>
                     </div>
                 </div>
                 <div class="box">
